styles.css
@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Iceberg&display=swap');

* {
    font-family: "Aldrich", sans-serif;
    color: rgb(240, 240, 240);
}

body {
    background-color: #d1d0d0;
}

button {
    font-size: 20px;
    width: 50px;
    height: 50px;
    background-color: #373737;
    border-radius: 5px;
    border: 0;
    box-shadow: 3px 3px black;
    margin: 5px;
    flex: 1 0 50px;
    padding: 5px 0 0 0;
}

button:active, button:disabled {
    box-shadow: none;
    position: relative;
    left: 3px;
    top: 3px;
}

button:hover {
    background-color: #696969;
    cursor: pointer;
}

.red:hover {
    background-color: hsl(1, 52%, 80%);
}

button:disabled {
    background-color: #101010;
    cursor: auto;
}

.calc-body {
    width: 300px;
    margin: 5% auto;
    box-shadow: 5px 5px 5px black;
    background-color: rgb(72, 78, 82);
    padding: 20px;
    border-radius: 10px;
}

p {
    margin: 0;
    padding: 0;
}

#name {
    font-size: 20px;
}

#calculator-text {
    font-size: 12px;
    font-weight: 400;
}

.calc-top {
    padding-bottom: 10px;
    text-align: center;
    font-weight: 700;
    font-size: 18px;
}

.calc-screen {
    display: grid;
    background-color: rgb(130, 162, 147);
    box-shadow: inset 4px 4px #00000099;
    border-radius: 5px;
    margin: 0 5px 10px 5px;

    padding: 5px 0px;
}

.unclear {
    color: hsl(152, 15%, 0%, 0.2);
    text-align: left;
}

.clear {
    color: black;
    text-align: right;
}

.screen-numbers {
    grid-column: 1;
    grid-row: 1;
    padding: 0 15px;
    margin: 0;
}

.screen-numbers.dots {
    letter-spacing: 23.5%;
    text-align: right;
    padding-right: 7px;
}

.screen-font {
    font-family: "Iceberg", sans-serif;
    font-size: 48px;
    font-style: italic;
    letter-spacing: 5%;
}

.dots span.unclear, .dots span.clear {
    margin-left: 9px;
    text-align: right;
}

.red {
    background-color: #D98A88;
    box-shadow: 3px 3px hsl(1, 52%, 20%);
}

.btn-row {
    display: flex;
}

.prevent-select {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

